--- a/app/views/pages/LocationInput.html
+++ b/app/views/pages/LocationInput.html
@@ -5,10 +5,15 @@ find location - create and view classified listings
 {% endblock %}
 
 {% block content %}
+<script>
+    const submit = () => {
+      console.log("hi") //this would be where we transfer to the next page but I can't get functionality working.
+    };
+</script>
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <fieldset class="govuk-fieldset">
+        <fieldset class="govuk-fieldset" onsubmit="<script></script>">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h1 class="govuk-fieldset__heading">
                     What is your location?
@@ -22,12 +27,10 @@ find location - create and view classified listings
                 <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" type="text" autocomplete="address-level2">
             </div>
 
+            <button class="govuk-button" data-module="govuk-button" type="submit">
+                Continue
+            </button>
         </fieldset>
-
-        <button class="govuk-button" data-module="govuk-button">
-            Continue
-        </button>
-
     </div>
 
 </div>
