--- a/app/views/pages/LocationInput.html
+++ b/app/views/pages/LocationInput.html
@@ -27,9 +27,11 @@ find location - create and view classified listings
                 <input class="govuk-input govuk-!-width-two-thirds" id="address-town" name="address-town" type="text" autocomplete="address-level2">
             </div>
 
-            <button class="govuk-button" data-module="govuk-button" type="submit">
-                Continue
-            </button>
+            <a href="/select-category">
+                <button class="govuk-button" data-module="govuk-button">
+                    Continue
+                </button>
+            </a>
         </fieldset>
     </div>
 
